@@ -1,5 +1,10 @@
 2003-10-23  Andreas Kupries  <andreask@activestate.com>
 
+	* unix/tclUnixChan.c (Tcl_MakeFileChannel): Applied [Patch 813606]
+	  fixing [Bug 813087]. Detection of sockets was off for Mac OS X
+	  which implements pipes as local sockets. The new code ensures
+	  that only IP sockets are detected as such.
+
 	* win/tclWinSock.c (TcpWatchProc): Watch for FD_CLOSE too when
 	  asked for writable events by the generic layer.
 	  (SocketEventProc): Generate a writable event too when a close is
